# gal

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  make_video.sh  packer_main.cpp  painter.py  parser.cpp
include/: color_transfer.hpp  genetic_algorithm.hpp  image_functions.hpp  packer.hpp  painter.hpp
python/: genetic_algorithm.py  main.py  painter.py
scripts/: color_transfer.py  make_img.py
